--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "david-test-please-work",
   "version": "1.0.0",
   "description": "please welp",
-  "main": "dist/index.js",
+  "main": "dist/index.ts",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
